--- a/styles/style.css
+++ b/styles/style.css
@@ -1,115 +1,201 @@
-*{
-    line-height: 1.6rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 1.6em;
-    margin:0;
+* {
+  line-height: 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 1.6em;
+  margin: 0;
 }
 
-header{
-    background-color: #fff;
-    padding-left: 30px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    box-shadow: 0 4px 2px -2px gray;
+header {
+  background-color: #fff;
+  padding-left: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  box-shadow: 0 4px 2px -2px gray;
 }
 
-.clr{
-    clear:both;
+.clr {
+  clear: both;
 }
 
-
-.body-container{
-    position: relative;
-    min-height: 100vh;
+.body-container {
+  position: relative;
+  min-height: 100vh;
 }
 
-header h1{
-    font-size: 36px;
+header h1 {
+  font-size: 36px;
 }
 
-.container{
-    margin: auto;
-    width: 85%;
+.container {
+  margin: auto;
+  width: 85%;
 }
 
-body{
-    background: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
-    height: 100%;
-    margin: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+body {
+  background: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 #content-wrap {
-    padding-bottom: 2.5rem; 
+  padding-bottom: 2.5rem;
+}
+
+#main-nav {
+  float: right;
+}
+
+li {
+  display: inline;
+  margin-right: 8px;
+}
+
+#main-nav a {
+  text-decoration: none;
+  line-height: 18px;
+  color: #2e2eff;
+}
+
+#main-section {
+  float: left;
+  box-sizing: border-box;
+  width: 65%;
+}
+
+#main-section h2 {
+  font-size: 26px;
+}
+
+#main-section p {
+  font-size: 18px;
+  margin-top: 16px;
+}
+
+#sidebar {
+  float: right;
+  box-sizing: border-box;
+  width: 35%;
+}
+
+#sidebar img {
+  height: 300px;
+}
+
+#main-container {
+  padding-top: 48px;
+  padding-right: 16px;
+}
+
+#main-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  text-align: center;
+}
+
+@media (max-width: 1013px) {
+  #main-section {
+    width: 100%;
+    float: none;
+    margin-bottom: 18px;
   }
 
-#main-nav{
-    float: right;
-}
-
-li{
-    display: inline;
-    margin-right: 8px;
-}
-
-#main-nav a{
-    text-decoration:  none;
-    line-height: 18px;
-    color: #2E2EFF;
-}
-
-#main-section{
-    float: left;
-    box-sizing: border-box;
-    width: 65%;
-}
-
-#main-section h2{
-    font-size: 26px;
-}
-
-#main-section p{
-   font-size: 18px;
-   margin-top: 16px;
-}
-
-#sidebar{
-    float: right;
-    box-sizing: border-box;
-    width: 35%;
-}
-
-#sidebar img{
-    height: 300px;
-}
-
-#main-container{
-    padding-top: 48px;
-    padding-right: 16px;
-}
-
-#main-footer{
-    position: absolute;
-    bottom: 0;
+  #sidebar {
     width: 100%;
-    height: 2.5rem;
-    text-align: center;
+    float: none;
+    margin-bottom: 2.6rem;
+  }
 }
 
-@media(max-width: 1013px){
-    #main-section{
-        width: 100%;
-        float: none;
-        margin-bottom: 18px;
-    }
+/*--------------------------------------issues-part------------------------------------*/
 
-    #sidebar{
-        width: 100%;
-        float: none;
-        margin-bottom: 2.6rem;
-    }
+.main {
+  margin-top: 2rem;
 }
 
+.header h1 {
+  text-align: center;
+  font-size: 36px;
+  font-weight: bolder;
+}
 
+.lists-container {
+  display: flex;
+  align-items: flex-start;
+  overflow-x: auto;
+  padding: 0 0.8rem 0.8rem;
+}
+
+.list {
+  display: flex;
+  flex: 0 0 19rem;
+  flex-direction: column;
+  background-color: #e2e4e6;
+  overflow: hidden;
+  padding: 1.4rem 0.8rem;
+  margin-right: 0.8rem;
+  border-radius: 0.8rem;
+  box-shadow: 0px 2px 2px 0px gray;
+}
+
+.list-title {
+  text-align: center;
+  color: #333;
+  margin: 1rem 0;
+}
+
+.list-items {
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+  max-height: calc(100vh - 13rem);
+  overflow-y: auto;
+  padding: 0.3rem 0.5rem;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+}
+
+.list-items li {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.3;
+  background-color: #fff;
+  padding: 0.65rem 0.6rem;
+  color: #4d4d4d;
+  border-bottom: 0.1rem solid #ccc;
+  border-radius: 0.3rem;
+  margin-bottom: 0.6rem;
+  margin-left: 0.5rem;
+  word-wrap: break-word;
+  cursor: pointer;
+}
+
+.list-items li:last-of-type {
+  margin-bottom: 0;
+}
+
+.list-items li:hover {
+  background-color: #eee;
+}
+
+#list-button-container {
+  background-color: whitesmoke;
+  border-bottom-left-radius: 0.8rem;
+  border-bottom-right-radius: 0.8rem;
+}
+
+.add-button {
+  background: #2e2eff;
+  font-weight: bold;
+  color: white;
+  width: 282px;
+  border: none;
+  border-radius: 0.3rem;
+  margin: 1rem 0.4rem;
+}
+
+/*--------------------------------------issues------------------------------------*/
