--- a/styles/forget-password.css
+++ b/styles/forget-password.css
@@ -45,14 +45,18 @@ button:hover {
   display: flex;
 align-items: center;
 justify-content: center;
-  color: white;
+  color: black;
   font-size: 25px;
   height: 100px;
   font-family: Helvetica, sans-serif;
 
 }
 body {
-  background: linear-gradient(-100deg, #A2F2F1 0%, #B19AFE 100%);
+  background: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   }
 
 /* Change styles for span and cancel button on extra small screens */
