--- a/styles/login.css
+++ b/styles/login.css
@@ -63,17 +63,21 @@ span.psw {
 
 .logo{
   display: flex;
-align-items: center;
-justify-content: center;
-  color: white;
+  align-items: center;
+  justify-content: center;
+  color: black;
   font-size: 25px;
   height: 100px;
   font-family: Helvetica, sans-serif;
 
 }
 body {
-  background: linear-gradient(-100deg, #A2F2F1 0%, #B19AFE 100%);
-  }
+  background: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
 @media screen and (max-width: 300px) {
   span.psw {
