--- a/client/styles/signup-page-style.css
+++ b/client/styles/signup-page-style.css
@@ -1,85 +1,105 @@
-body {
-    padding: 0;
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    color: #5e6c84;
+
+body {font-family: Arial, Helvetica, sans-serif;
+    background: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
     height: 100%;
-    background: linear-gradient(-100deg, #A2F2F1 0%, #B19AFE 100%);
-}
-
-h1 {
-    text-align: center;
-    font-size: 50px;
-    color: black;
-}
-
-.sign-up-form {
-    width: 300px;
-    background: white;
-    padding: 20px;
-    margin: auto;
-    border-radius: 8px;
-}
-
-.sign-up-form h1 {
-    font-size: 30px;
-}
-
-form input[type="text"],
-form input[type="email"],
-form input[type="password"] {
-    display: block;
-    width: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;}
+form {border: 17px ;
     box-sizing: border-box;
-    border-radius: 8px;
-    border: 1px solid #c4c4c4;
-    padding: 1em;
-    margin-bottom: 1.25rem;
-    font-size: 0.875rem;
+  width: 400px;
+  height: 300px;
+  position: fixed;
+  top: 25%;
+  left: 40%;
+  margin-top: -50px;
+  margin-left: -70px;
 }
 
-label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-size: 16px;
-    text-align: left;
+input[type=email], input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
-.signup-btn {
-    display: block;
-    width: 100%;
-    background-color: #233975;
-    color: white;
-    font-weight: 700;
-    border: none;
-    padding: 1rem;
-    border-radius: 8px;
-    font-size: 0.75rem;
-    letter-spacing: 0.5px;
+button {
+  background-color: #233975;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 6px;
 }
 
-.signup-btn:hover {
-    background: #2c4893;
-    cursor: pointer;
+button:hover {
+  opacity: 0.8;
 }
 
-a {
-    text-decoration: none;
-    color: #233975;
+.cancelbtn {
+  width: auto;
+  padding: 10px 17px;
+  background-color:white;
+  color:#565b66;
+  border: 2px solid #565b66;
+  border-radius: 6px;
+  margin-top: -10px;
 }
 
-a:hover {
-    text-decoration: underline;
-}
-
-#error{
+.container {
+    padding: 20px 20px 10px;
+    background-color: white;
+    border-radius: 6px;
+    color: #5E6C84;
+  }
+  
+  span.psw {
+    float: right;
+    padding-top: 16px;
+    margin-top: 40px;
+  
+  }
+  
+  .logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-size: 25px;
+    height: 100px;
+    font-family: Helvetica, sans-serif;
+  }
+ 
+  a {
+      text-decoration: none;
+      color: #233975;
+  }
+  
+  a:hover {
+      text-decoration: underline;
+  }
+  
+  @media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+  }
+  
+  #error{
     display:none;
     background-color: #FFCCCC;
     padding: 5px;
-}
-
-#error-message{
+  }
+  
+  #error-message{
     color: black;
     text-align: center;
-}
+  }
