--- a/client/styles/login.css
+++ b/client/styles/login.css
@@ -27,7 +27,7 @@ border: 1px solid #ccc;
 box-sizing: border-box;
 }
 
-button {
+#submit-btn {
 background-color: #233975;
 color: white;
 padding: 14px 20px;
@@ -38,7 +38,7 @@ width: 100%;
 border-radius: 6px;
 }
 
-button:hover {
+#submit-btn:hover {
 opacity: 0.8;
 }
 
