--- a/client/styles/signup-page-style.css
+++ b/client/styles/signup-page-style.css
@@ -25,7 +25,7 @@ form {border: 17px ;
   box-sizing: border-box;
 }
 
-button {
+#submit-btn  {
   background-color: #233975;
   color: white;
   padding: 14px 20px;
@@ -36,7 +36,7 @@ button {
   border-radius: 6px;
 }
 
-button:hover {
+#submit-btn :hover {
   opacity: 0.8;
 }
 
