--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -63,7 +63,7 @@ li {
 #main-section {
   float: left;
   box-sizing: border-box;
-  width: 65%;
+  width: 65%;P
 }
 
 #main-section h2 {
@@ -280,91 +280,3 @@ li {
   margin-left: 10px;
   width: 80px;
 }
-
-/*******************Statuses********/
-
-/* Remove margins and padding from the list */
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-
-ul li {
-  cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  list-style-type: none;
-  background: #eee;
-  font-size: 18px;
-  transition: 0.2s;
-  display: block;
-  margin-right: 8px;
-
-  /* make the list items unselectable */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
-  background: #f9f9f9;
-}
-
-/* Darker background-color on hover */
-ul li:hover {
-  background: #ddd;
-}
-
-/* When clicked on, add a background color and strike out text */
-ul li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
-}
-
-
-
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
-}
-
-.close:hover {
-  background-color: #f44336;
-  color: white;
-}
-
-.liStatus {
-  padding: 20px 0px;
-  text-align: center;
-}
-
-.liStatus:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-
-.addStatus {
-    
-  width: auto;
-  padding: 5px 12px;
-  background-color:white;
-  color:#565b66;
-  border: 2px solid #565b66;
-  border-radius: 6px;
-  margin-top: 30px;
-
-}
-
-.addStatus:hover {
-  background-color: #bbb;
-}
-
-
